--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,5 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    modular_method = modular_method
-packages = modular_method
+packages = find:
 python_requires = >=3.7
